
    - A `CCACHE_COMPILERCHECK` option has been added. This option tells ccache
      what compiler-identifying information to hash to ensure that results
      retrieved from the cache are accurate. Possible values are: none (don't
      hash anything), mtime (hash the compiler's mtime and size) and content
      (hash the content of the compiler binary). The default is mtime.

    - Temporary files are now created in the directory they will end up in.
      This makes ccache more friendly to Linux's directory layout.

    - Added support for long command-line options.

    - A `CACHEDIR.TAG` file is now created in the cache directory. See
      <http://www.brynosaurus.com/cachedir/>.

    - Messages printed to the debug log (specified by `CCACHE_LOGFILE`) have
      been improved.

    - By default, ccache now puts temporary files in `$CCACHE_DIR/tmp` to avoid
      cluttering the top directory.

    - Improved the test suite and added tests for most of the new
      functionality. It's now also possible to specify a subset of tests to
      run.

    - Standard error output from the compiler is now only stored in the cache
      if it's non-empty.

    - If the compiler produces no object file or an empty object file, but
      gives a zero exit status (could be due to a file system problem, a buggy
      program specified by `CCACHE_PREFIX`, etc.), ccache copes with it
      properly.

    - Added installcheck and distcheck make targets.

    - Clarified cache size limit options' semantics.

    - Improved display of cache max size values.

    - For debugging purposes, the variable `CCACHE_VERBOSE` may now be set to
      make ccache print executed commands to standard output.

    - The following options are no longer hashed in the preprocessor mode:
      `-imacros`, `-iprefix`, `-iwithprefix`, `-iwithprefixbefore`,
      `-nostdinc`, `-nostdinc++` and `-U`.


Bug fixes
~~~~~~~~~

    - Fixed build on FreeBSD.

    - Improved detection of home directory.
