@@ -49,6 +49,7 @@ enum stats {
 	STATS_CACHEHIT_DIR,
 	STATS_NOOUTPUT,
 	STATS_EMPTYOUTPUT,
+	STATS_BADEXTRAFILE,
 
 	STATS_END
 };
