@@ -213,6 +213,12 @@ cases you won't need any of these as the defaults will be fine.
     *CCACHE_EXTENSION* option to override the default. On HP-UX set this
     environment variable to *i* if you use the ``aCC'' compiler.
 
+*CCACHE_EXTRAFILES*::
+
+    If you set the environment variable *CCACHE_EXTRAFILES* to a
+    space-separated list of paths then ccache will include the contents of
+    those files when calculating the hash sum.
+
 *CCACHE_HARDLINK*::
 
     If you set the environment variable *CCACHE_HARDLINK* then ccache will
